// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csv creates backup csvs 1`] = `
Array [
  Object {
    "content": "dHash,Location,Key,Default Language,Existing Translation,Updated Translation (or leave blank)
OnhpU4izi1,menu.ja.yaml,[0:home].title,Home,ホーム,
Tvyg0Qxf64,menu.ja.yaml,[1:about].title,About,約,
aXUvIxOy8B,menu.ja.yaml,[2:news].title,News,ニュース,
O7zuwuv2p5,sub/welcome.ja.yaml,intro,Welcome to this sub folder,このサブフォルダへようこそ,
luDxWK7tmC,sub/welcome.ja.yaml,description,This is a description that won't be translated,これは翻訳されない説明です,
6Aaikc/D5h,sub/welcome.ja.yaml,items.[0:test].title,Testing,テスト中,
UJJQgXm1Ai,sub/welcome.ja.yaml,items.[1:hello].title,Hello Work,ハローワーク,
fozSBW2nOn,ui.global.ja.yaml,title,Title,題名,
DdECGc15NC,ui.global.ja.yaml,description,This is a description,これは説明です,
V7FjiOgcRD,ui.global.ja.yaml,new,Some new key,新しいキー,
zcRMuPQjiV,ui.global.ja.yaml,body,\\"## This is some markdown

How is this?
\\",\\"##これはいくつかの値下げです

これはどのように？
\\",
",
    "fileName": "test/data/csv-test/ja.1.csv",
  },
  Object {
    "content": "dHash,Location,Key,Default Language,Existing Translation,Updated Translation (or leave blank)
OnhpU4izi1,menu.ja.yaml,[0:home].title,Home,ホーム,
Tvyg0Qxf64,menu.ja.yaml,[1:about].title,About,約,
aXUvIxOy8B,menu.ja.yaml,[2:news].title,News,ニュース,
O7zuwuv2p5,sub/welcome.ja.yaml,intro,Welcome to this sub folder,このサブフォルダへようこそ,
luDxWK7tmC,sub/welcome.ja.yaml,description,This is a description that won't be translated,これは翻訳されない説明です,
6Aaikc/D5h,sub/welcome.ja.yaml,items.[0:test].title,Testing,テスト中,
UJJQgXm1Ai,sub/welcome.ja.yaml,items.[1:hello].title,Hello Work,ハローワーク,
fozSBW2nOn,ui.global.ja.yaml,title,Title,題名,
DdECGc15NC,ui.global.ja.yaml,description,This is a description,これは説明です,
V7FjiOgcRD,ui.global.ja.yaml,new,Some new key,新しいキー,
zcRMuPQjiV,ui.global.ja.yaml,body,\\"## This is some markdown

How is this?
\\",\\"##これはいくつかの値下げです

これはどのように？
\\",
",
    "fileName": "test/data/csv-test/ja.2.csv",
  },
  Object {
    "content": "dHash,Location,Key,Default Language,Existing Translation,Updated Translation (or leave blank)
OnhpU4izi1,menu.ja.yaml,[0:home].title,Home,ホーム,
Tvyg0Qxf64,menu.ja.yaml,[1:about].title,About,約,
aXUvIxOy8B,menu.ja.yaml,[2:news].title,News,ニュース,
O7zuwuv2p5,sub/welcome.ja.yaml,intro,Welcome to this sub folder,このサブフォルダへようこそ,
luDxWK7tmC,sub/welcome.ja.yaml,description,This is a description that won't be translated,これは翻訳されない説明です,
6Aaikc/D5h,sub/welcome.ja.yaml,items.[0:test].title,Testing,テスト中,
UJJQgXm1Ai,sub/welcome.ja.yaml,items.[1:hello].title,Hello Work,ハローワーク,
fozSBW2nOn,ui.global.ja.yaml,title,Title,題名,
DdECGc15NC,ui.global.ja.yaml,description,This is a description,これは説明です,
V7FjiOgcRD,ui.global.ja.yaml,new,Some new key,新しいキー,
zcRMuPQjiV,ui.global.ja.yaml,body,\\"## This is some markdown

How is this?
\\",\\"##これはいくつかの値下げです

これはどのように？
\\",
",
    "fileName": "test/data/csv-test/ja.3.csv",
  },
  Object {
    "content": "dHash,Location,Key,Default Language,Existing Translation,Updated Translation (or leave blank)
OnhpU4izi1,menu.ja.yaml,[0:home].title,Home,ホーム,
Tvyg0Qxf64,menu.ja.yaml,[1:about].title,About,約,
aXUvIxOy8B,menu.ja.yaml,[2:news].title,News,ニュース,
O7zuwuv2p5,sub/welcome.ja.yaml,intro,Welcome to this sub folder,このサブフォルダへようこそ,
luDxWK7tmC,sub/welcome.ja.yaml,description,This is a description that won't be translated,これは翻訳されない説明です,
6Aaikc/D5h,sub/welcome.ja.yaml,items.[0:test].title,Testing,テスト中,
UJJQgXm1Ai,sub/welcome.ja.yaml,items.[1:hello].title,Hello Work,ハローワーク,
fozSBW2nOn,ui.global.ja.yaml,title,Title,題名,
DdECGc15NC,ui.global.ja.yaml,description,This is a description,これは説明です,
V7FjiOgcRD,ui.global.ja.yaml,new,Some new key,新しいキー,
zcRMuPQjiV,ui.global.ja.yaml,body,\\"## This is some markdown

How is this?
\\",\\"##これはいくつかの値下げです

これはどのように？
\\",
",
    "fileName": "test/data/csv-test/ja.csv",
  },
]
`;

exports[`csv generates csv 1`] = `
Array [
  Object {
    "content": "dHash,Location,Key,Default Language,Existing Translation,Updated Translation (or leave blank)
OnhpU4izi1,menu.ja.yaml,[0:home].title,Home,ホーム,
Tvyg0Qxf64,menu.ja.yaml,[1:about].title,About,約,
aXUvIxOy8B,menu.ja.yaml,[2:news].title,News,ニュース,
O7zuwuv2p5,sub/welcome.ja.yaml,intro,Welcome to this sub folder,このサブフォルダへようこそ,
luDxWK7tmC,sub/welcome.ja.yaml,description,This is a description that won't be translated,これは翻訳されない説明です,
6Aaikc/D5h,sub/welcome.ja.yaml,items.[0:test].title,Testing,テスト中,
UJJQgXm1Ai,sub/welcome.ja.yaml,items.[1:hello].title,Hello Work,ハローワーク,
fozSBW2nOn,ui.global.ja.yaml,title,Title,題名,
DdECGc15NC,ui.global.ja.yaml,description,This is a description,これは説明です,
V7FjiOgcRD,ui.global.ja.yaml,new,Some new key,新しいキー,
zcRMuPQjiV,ui.global.ja.yaml,body,\\"## This is some markdown

How is this?
\\",\\"##これはいくつかの値下げです

これはどのように？
\\",
",
    "fileName": "test/data/csv-test/ja.csv",
  },
]
`;

exports[`csv parses csv 1`] = `
Array [
  Object {
    "dHash": "OnhpU4izi1",
    "defaultValue": "Home",
    "path": "menu.ja.yaml",
    "sig": "[0:home].title",
    "value": "Test update",
  },
  Object {
    "dHash": "zcRMuPQjiV",
    "defaultValue": "## This is some markdown

How is this?
",
    "path": "ui.global.ja.yaml",
    "sig": "body",
    "value": "## Multi Line

Test",
  },
]
`;
